# mircoservices-url-shorter

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pylint.yml
auth/: .env.example  Dockerfile  pyproject.toml
auth/migrations/: env.py
auth/migrations/versions/: 208763c4427a_04_login_unique.py  38b2a3ef3449_01_initial.py  6d73ee6b0ded_02_temp_clear.py  d1457fdd1129_03_user_model_update.py
auth/src/: main.py
auth/src/api/v1/: auth.py  user.py
auth/src/auth/: auth.py
auth/src/core/: config.py  logger.py
auth/src/db/: db.py
auth/src/models/: __init__.py  user.py
auth/src/schemas/: user.py
auth/src/services/: auth.py  user.py
auth/tests/: conftest.py
auth/tests/unit_tests/: test_auth_services.py  test_user_services.py
gateway/: .env.example  Dockerfile  pyproject.toml
gateway/src/: main.py
gateway/src/auth/: auth.py  decode.py
gateway/src/core/: config.py
gateway/src/routes/: __init__.py
gateway/src/routes/internal/: internal.py
gateway/src/routes/token/: token.py
gateway/src/routes/url_shorter/: url_shorter_routes.py
gateway/src/routes/user/: user_routes.py
gateway/src/schemas/url_shorter_microservice/: url_shorter.py
migrations/versions/: 0f8377719863_01_initial_db.py  300d8a60b882_03_short_url_unique_fild_change.py  503c9a623c61_02_added_short_url_statistic.py  625dc09fdc12_04_user_change.py
nginx/: nginx.conf
src/: main.py
src/api/v1/: base.py  short_url.py
src/auth/: __init__.py  auth.py  user_manager.py
src/core/: config.py  logger.py
src/db/: db.py
src/models/: __init__.py  short_url.py  short_url_statistic.py  user.py
src/repositories/: short_url.py
src/schemas/: short_url.py  user.py
src/services/: short_url.py
tests/: test_main.py
url-shorter/: .env.example  Dockerfile  pyproject.toml
url-shorter/src/: main.py
url-shorter/src/api/v1/: shorted_url.py
url-shorter/src/auth/: auth.py
url-shorter/src/core/: config.py
url-shorter/src/db/: database.py
url-shorter/src/models/: shorted_url.py
url-shorter/src/schedule_tasks/: deactivate_expired_urls.py
url-shorter/src/schemas/: shorted_url.py
url-shorter/src/services/: shorted_url.py
