[tool.poetry]
name = "url-shorter"
version = "0.1.0"
description = ""
authors = ["Mark Chalenko <mark.chalenko@rndx2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
