[tool.poetry]
name = "url-shorter"
version = "0.1.0"
description = ""
authors = ["Mark Chalenko <markus.chalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
asyncpg = "^0.28.0"
np = "^1.0.2"
numpy = "1.25"
pydantic-settings = "^2.0.3"
greenlet = "^3.0.1"
fastapi-cache = "^0.1.0"
redis = "^5.0.1"
orjson = "^3.9.10"
uuid = "^1.30"
oauth = "^1.0.1"
pytest = "^8.0.2"
bcrypt = "4.0.1"
python-jose = {extras = ["cryptogrphy"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

