[tool.poetry]
name = "api-gateway-microservice"
version = "0.1.0"
description = ""
authors = ["Mark Chalenko <markus.chalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
orjson = "^3.9.15"
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptogrphy"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
oauth = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
