[tool.poetry]
name = "url-shorter-microservice"
version = "0.1.0"
description = ""
authors = ["Mark Chalenko <markus.chalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
fastapi = "^0.110.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
orjson = "^3.9.15"
python-jose = {extras = ["cryptogrphy"], version = "^3.3.0"}
bcrypt = "^4.1.2"
oauth = "^1.0.1"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
httpx = "^0.27.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
